syntax = "proto3";
option csharp_namespace = "GRPC_PurchaseStoreServer";

package purchaseStoreDTO;

service PurchaseStoreDTO {
  rpc CreatePurchaseStore(CreatePurchaseStoreDTOLookUpModel) returns (CreatePurchaseStoreDTOModel);
  rpc UpdatePurchaseStore(UpdatePurchaseStoreDTOLookUpModel) returns (UpdatePurchaseStoreDTOModel);
}

// Requesta
message CreatePurchaseStoreDTOLookUpModel {
  int32 StoreId = 1;
}

// Response
message CreatePurchaseStoreDTOModel {
	int32 PurchaseId = 1;
}

// Request
message UpdatePurchaseStoreDTOLookUpModel {
  int32 PurchaseId = 1;
  repeated ProductStoreDTOLookUpModel ProductStoreDTOLookUpModel = 2;
}

// Response
message UpdatePurchaseStoreDTOModel {
	int32 PurchaseId = 1;
	repeated ProductStoreDTOModel ProductStoreDTOModel = 2;
	double SalePriceTotal = 3;
}


/*message ProductSaleStoreDTOModel {
	int32 Id = 1;
	ProductStoreDTOModel ProductStoreDTOModel = 2;
	double salePrice = 3;
}*/

message ProductStoreDTOLookUpModel {
	int32 Id = 1;
}

message ProductStoreDTOModel {
	int32 Id = 1;
	int32 Barcode = 2;
	double PurchasePrice = 3;
	string Name = 4;
	double SalePrice = 5;
}